fix hero z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -898,7 +898,7 @@ strong {
   
   .hero-section .container {
     position: relative;
-    z-index: 9;
+    z-index: 11;
   }
   
   .hero-slides {
